--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -19,25 +19,40 @@ body {
     margin: 0;
 }
 
-.logo {
+#logo {
     position: relative;
     font-family: 'CocoSharp Trial';
     font-style: normal;
     font-size: 2.5em;
     text-transform: lowercase;
-    color: #FFFFFF;
+    color: #fff;
+    transition: .4s;
 }
 
-.navbar {
-    position: relative;
+.logo-ativo {
+    color: #1174c4 !important;
+}
+
+#navbar {
+    position: fixed;
+    top: 0;
     display: flex;
     justify-content: space-between;
     width: 100%;
     box-sizing: border-box;
     padding: 1% 4%;
+    z-index: 2;
+    transition: .4s;
 }
 
-.navbar ul {
+.navbar-ativo {
+    background: rgba(255, 255, 255, 0.884);
+    box-shadow: 0 8px 32px 0 rgba(77, 79, 109, 0.062);
+    backdrop-filter: blur( 4px );
+    border-bottom: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+#navbar ul {
     display: flex;
     align-items: center;
     gap: 50px;
@@ -46,13 +61,37 @@ body {
     font-weight: 600;
 }
 
-.navbar ul li a {
+#navbar ul li a {
     position: relative;
     text-decoration: none;
-    color: #ffffff;
 }
 
-.nav-link::after {
+.nav-link {
+    color: white;
+    transition: .4s;
+}
+
+.nav-link-ativo {
+    color: #1174c4;
+}
+
+.link-animation-ativo::after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background-color: #1174c4;
+    border-radius: 4px;
+    transition: .4s ease-in-out;
+}
+
+.link-animation-ativo:hover::after {
+    width: 100%;
+}
+
+.link-animation::after {
     content: "";
     position: absolute;
     bottom: -5px;
@@ -61,10 +100,10 @@ body {
     height: 2px;
     background-color: white;
     border-radius: 4px;
-    transition: .4s ease-in-out
+    transition: .4s ease-in-out;
 }
 
-.nav-link:hover::after {
+.link-animation:hover::after {
     width: 100%;
 }
 
@@ -72,10 +111,11 @@ body {
 #sobre,
 #objetivo,
 #solucao,
-#simulador {
+#simulador,
+#footer {
     position: relative;
     width: 100%;
-    padding: 0 2%;
+    padding: 2% 4%;
     box-sizing: border-box;
 }
 
@@ -85,6 +125,7 @@ body {
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
 }
 
@@ -106,7 +147,7 @@ body {
 .header-content {
     display: flex;
     width: 100%;
-    margin: 5% 0 0 0;
+    margin: 8% 0 0 0; 
 }
 
 .header-content .header-background {
@@ -245,7 +286,6 @@ body {
 
 .objetivo01 p {
     text-align: justify;
-    font-weight: 600;
 }
 
 .arrow-objetivo {
@@ -264,7 +304,6 @@ body {
 .objetivo02 p {
     margin: 50px;
     text-align: justify;
-    font-weight: 600;
 }
 
 .arrow-objetivo2 {
@@ -288,7 +327,6 @@ body {
 .objetivo03 p {
     margin: 50px;
     text-align: justify;
-    font-weight: 600;
 }
 
 .milk02 {
@@ -391,13 +429,11 @@ body {
 
 #cards_carousel a {
     display: none;
-
-
 }
 
 #cards_carousel:hover {
     box-shadow: 0px 0px 100px #ffffff;
-    z-index: 2;
+    z-index: 1;
     -webkit-transition: all 175ms ease-in;
     -webkit-transform: scale(1.1);
     -ms-transition: all 175ms ease-in;
@@ -428,6 +464,11 @@ body {
     font-weight: 600;
     margin-top: 5%;
     text-transform: capitalize;
+    transition: .4s;
+}
+
+.btn:hover {
+    background-color: #8dc4f8;
 }
 
 .container {
@@ -451,7 +492,7 @@ body {
     margin: 1;
 }
 
-.inputs {
+.form-simulador {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -467,29 +508,36 @@ body {
     padding: 5%;
 }
 
-.inputs label {
+.form-simulador label {
     display: flex;
     flex-direction: column;
     gap: 8px;
     width: 100%;
 }
 
-.inputs .btn {
+#simulador .btn {
     width: 150px;
 }
 
-.inputs input {
+.form-simulador input {
     align-items: center;
     border-radius: 10px;
     padding: 5px;
     margin-left: 2%;
     width: 85%;
     height: 20px;
-    border: 1px solid #FFFFFF;
+    border: 2px solid #FFFFFF;
     padding: 16px;
+    transition: all .4s;
+    outline: none;
 }
 
-div .inputs text {
+.form-simulador input:focus {
+    background-color: #eee;
+    border: 2px solid #003366;
+}
+
+div .form-simulador text {
     margin-left: 2%;
 }
 
@@ -505,13 +553,12 @@ div .inputs text {
 #resultado {
     display: flex;
     align-items: center;
-    width: 50%;
     background-color: #FFFFFF;
     font-family: 'Inter';
     font-style: normal;
     border-radius: 15px;
-    margin: 0 0 5% 0;
-    padding: 0 0 0 2%;
+    margin-bottom: 5%;
+    padding: 2%;
 }
 
 tbody {
@@ -520,8 +567,6 @@ tbody {
 }
 
 table {
-    margin: 10% 0;
-    width: 155%;
     display: table;
     border-collapse: separate;
     box-sizing: border-box;
@@ -530,20 +575,36 @@ table {
     border-color: #FFFFFF;
 }
 
-table .titulos,
-th {
-    border: 3px #58A1E4;
-    background-color: #58A1E4;
+td {
+    padding: 4px 8px;
 }
 
-.titulos {
+table .titulos-table,
+td {
+    border: 3px #58A1E4;
+    padding: 4px 8px;
+}
+
+th, td {
+    width: 10vw;    
+}
+
+.titulos-table {
     color: #FFFFFF;
     width: auto;
 }
 
-#novo {
-    width: 25.5%;
-    align-items: center;
+.titulos-table td {
+    font-weight: bold;
+    background-color: #58A1E4;
+}
+
+.titulos-table td:nth-child(1) {
+    border-radius: 8px 0 0 0;
+}
+
+.titulos-table td:nth-child(4) {
+    border-radius: 0px 8px 0 0;
 }
 
 .container-login {
@@ -650,12 +711,12 @@ th {
 }
 
 .flex {
-    gap: 2%;
     display: flex;
 }
 
 .form .flex {
     justify-content: space-between;
+    gap: 2%;
 }
 
 .form input {
@@ -693,17 +754,19 @@ th {
 footer {
     background-color: white;
     position: relative;
-
 }
 
 footer .final {
-    justify-content: space-around;
-    display: flex;
-    padding: 50px;
-
+    padding-top: 50px;
 }
 
-footer .logo_footer {
+.final .flex {
+    justify-content: space-around;
+    align-items: center;
+    padding: 4% 0;
+}
+
+.logo_footer {
     padding-right: 150px;
     padding-left: 100px;
     text-align: center;
@@ -713,7 +776,6 @@ footer ul {
     list-style-type: none;
     padding-left: 200px;
     text-decoration: none;
-    text-align: center;
 }
 
 footer li {
@@ -722,20 +784,22 @@ footer li {
 
 footer #dois {
     display: flex;
-    justify-content: space-evenly;
+    gap: 20px;
     text-decoration: none;
     text-align: center;
-
 }
 
 footer #redes {
     display: flex;
-    justify-content: space-evenly;
+    gap: 20px;
     text-decoration: none;
     text-align: center;
     color: #232323;
     font-size: 12px;
+}
 
+.final hr {
+    border-color: #58A1E4;
 }
 
 footer .final2 {
@@ -744,9 +808,6 @@ footer .final2 {
     text-decoration: none;
     list-style: none;
     text-transform: uppercase;
-    margin-top: 0px;
-    border-top: 1px #7AB2E1 solid;
-
 }
 
 .navbar_inf {
@@ -754,18 +815,15 @@ footer .final2 {
     display: flex;
     width: 100%;
     box-sizing: border-box;
-    padding: 1% 4%;
+    padding: 1% 0%;
 }
 
 footer li {
     padding: 1% 4%;
-
 }
-
 
 .navbar_inf ul {
     display: flex;
-    align-items: center;
     font-weight: 300;
 }
 
