--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -40,7 +40,7 @@ body {
     justify-content: space-between;
     width: 100%;
     box-sizing: border-box;
-    padding: 1% 4%;
+    padding: 2% 4%;
     z-index: 2;
     transition: .4s;
 }
@@ -145,6 +145,7 @@ body {
 }
 
 .header-content {
+    box-sizing: border-box;
     display: flex;
     width: 100%;
     margin: 8% 0 0 0; 
