--- a/public/styles/style-dashboard.css
+++ b/public/styles/style-dashboard.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.cdnfonts.com/css/momcake?styles=70427,70426');
-@import url('https://fonts.googleapis.com/css?family=Inter');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
 
 body {
  
     background-color: #eee;
     font-family: 'Inter', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, ul, li {
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -35,8 +40,6 @@ nav ul {
     flex-direction: column;
     gap: 16px;
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
 nav ul li {
@@ -44,8 +47,6 @@ nav ul li {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
-    padding: 0;
 }
 
 nav ul li a img {
@@ -107,9 +108,7 @@ nav ul li a img {
 }
 
 .container h3 {
-    font-size: 14px;  
-    margin: 0;
-    padding: 0;  
+    font-size: 14px;   
 }
 
 .container.cards {
@@ -148,8 +147,26 @@ nav ul li a img {
 }
 
 .info {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 30%;
     background-color: #fff;
     border-radius: 20px;
+    padding: 4%;
+    box-sizing: border-box;
+}
+
+.info span {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 30px;
+    font-weight: 800;   
+    color: #383838;
+    margin-top: 10%;
+}
+
+.info img {
+    width: 40px;
 }
