Atualizaçâo dos Diretorios com os Arquivos corretos

--- a/public/styles/style-dashboard.css
+++ b/public/styles/style-dashboard.css
@@ -53,6 +53,31 @@ nav ul li a img {
     width: 25px;
 }
 
+select {
+    padding: 4px 6px;
+    height: 100%;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 22px 9px rgba(0, 0, 0, 0.01), 
+                0px 0px 7px rgba(0, 0, 0, 0.02), 
+                0px 6px 6px rgba(0, 0, 0, 0.03), 
+                0px 1px 3px rgba(0, 0, 0, 0.1), 
+                0px 0px 0px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+select option:checked {
+    background-color: #ddd;
+    border: none;
+}
+
+.empresa {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
 .empresa-nome {
     font-family: 'MOMCAKE', sans-serif;
     color: #58A1E4;
@@ -146,6 +171,10 @@ nav ul li a img {
     padding: 0;
 }
 
+.container .info:nth-child(2) {
+    cursor: pointer;
+}
+
 .info {
     display: flex;
     flex-direction: column;
@@ -153,7 +182,7 @@ nav ul li a img {
     height: 30%;
     background-color: #fff;
     border-radius: 20px;
-    padding: 4%;
+    padding: 5%;
     box-sizing: border-box;
 }
 
