--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -241,10 +241,11 @@ input {
     bottom: 0%;
     position: absolute;
     z-index: -3;
-    filter: brightness(1)
+    filter: brightness(1.1)
 }
 
 #sobre {
+    margin-top: 5%;
     background-color: #FFFFFF;
     width: 100%;
 
