--- a/public/dashboard/style/style-dashboard.css
+++ b/public/dashboard/style/style-dashboard.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.cdnfonts.com/css/momcake?styles=70427,70426');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
+::-webkit-scrollbar{
+    width: 8px;
+    background-color: #fff;
+    border-radius: 30px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #ddd;
+    border-radius: 30px;
+}
 
 body {
  
@@ -187,11 +196,44 @@ select option:checked {
     box-sizing: border-box;
 }
 
-.info span {
+.lista-armazens {
     display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 65%;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 5%;
+    box-sizing: border-box;
+    overflow-y: scroll; 
     align-items: center;
+}
+
+.lista-armazens .valor{
+    display: flex;
+    font-size: 18px;
+    color: #58A1E4;
+    gap: 5px;
+}
+
+.valor ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    list-style: none;
+    text-transform: uppercase;
+}
+.valor ul li a {
+    text-decoration: none;
+    color: #58A1E4;
+}
+.info span,
+.lista-armazens span {
+    display: flex;
     gap: 8px;
-    font-size: 20px;
+    align-items: center;
+    font-size: 15px;
     font-weight: 800;   
     color: #383838;
     margin-top: 10%;
@@ -201,6 +243,15 @@ select option:checked {
     font-size: 13px;
 }
 
-.info img {
-    width: 35px;
+.lista-armazens h4{
+    font-size: 17px;
 }
+
+.info img {
+    width: 20px;
+}
+
+.lista-armazens img {
+    margin-right: 10px;
+}
+
