--- a/public/dashboard/style/cadastroUser.css
+++ b/public/dashboard/style/cadastroUser.css
@@ -21,7 +21,6 @@ h1, h2, h3, h4, h5, h6, ul, li {
 }
 
 header {
-    flex-direction: start;
     display: flex;
     padding: 10px;
     width: 10%;
@@ -33,9 +32,7 @@ header {
 
 .tudao {
     display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
 
 }
 
@@ -44,7 +41,7 @@ nav {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 40px;
+    width: 50px;
     height: 90vh;
     padding: 4%;
     background-color: #58A1E4;
@@ -53,7 +50,7 @@ nav {
 }
 
 nav ul {
-    width: 60%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -61,7 +58,7 @@ nav ul {
 }
 
 nav ul li {
-    width: 100%;
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,13 +72,11 @@ nav ul li {
     width: 500px;
     height: 80%;
     background-color: #DCDCDC;
-    padding: 20px;
 }
 
 .caixa-grande {
-    width: 90%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding-top: 2%;
     gap: 5px;
 }
@@ -112,7 +107,7 @@ label {
 }
 
 .caixa-cadastro h2 {
-    padding-bottom: 40px;
+    padding-bottom: 80px;
     padding-top: 10px;
     font-family: 'Inter';
 }
@@ -144,14 +139,4 @@ button:hover {
 
 img {
     width: 25px;
-}
-
-#cardErro {
-    height: 20px;
-    transition: .5s;
-}
-
-#mensagem_erro {
-    color: #b03838;
-    font-weight: 600;
 }
