--- a/public/dashboard/style/cadastroUser.css
+++ b/public/dashboard/style/cadastroUser.css
@@ -16,8 +16,17 @@
 body {
     background-color: #eee;
     font-family: 'Inter', sans-serif;
+    color: white;
+    display: flex;
+    flex-direction: row;
 }
+/* .tudao {
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+    align-items: center;
 
+} */
 h1, h2, h3, h4, h5, h6, ul, li {
     margin: 0;
     padding: 0;
@@ -27,29 +36,23 @@ header {
     flex-direction: start;
     display: flex;
     padding: 10px;
-    width: 10%;
+    width: 15%;
     height: 50%;
     padding: 1% 2%;
     box-sizing: border-box;
     gap: 15px;
 }
 
-.tudao {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
 
-}
 
 nav {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-    width: 90px;
+    align-items: start;
+    width: 100%;
     height: 90vh;
-    padding: 4%;
+    padding: 2%;
     background-color: #58A1E4;
     border-radius: 16px;
     box-sizing: border-box;
@@ -63,6 +66,7 @@ nav a {
 nav ul {
     width: 60%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     gap: 16px;
     list-style: none;
@@ -76,18 +80,17 @@ nav ul li {
 }
 
 .container-cadastro {
-    border: 2px #7ab3e1 solid;
     border-radius: 5%;
     display: flex;
     justify-content: center;
     width: 500px;
     height: 80%;
-    background-color: #DCDCDC;
+   background-image: linear-gradient(227.85deg, #5d9fdc 0.29%, #2677B1 27.04%, #025183 72.67%);
     padding: 20px;
 }
 
 .caixa-grande {
-    width: 90%;
+    width: 50%;
     display: flex;
     justify-content: center;
     padding-top: 2%;
@@ -97,6 +100,7 @@ nav ul li {
 .caixa-cadastro {
     display: flex;
     flex-direction: column;
+    gap: 8px;
 }
 
 input {
@@ -164,7 +168,14 @@ img {
     font-weight: 600;
 }
 
-.div-checkbox {
+.flex  {
     display: flex;
-    flex-direction: row;
+    gap: 30px;
+}
+
+.caixa-cadastro label {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 4px;
 }
