--- a/public/dashboard/style/cadastroUser.css
+++ b/public/dashboard/style/cadastroUser.css
@@ -11,12 +11,13 @@
 }
 *{
     text-decoration: none;
+    margin: 0%;
 }
 
 body {
-    background-color: #eee;
+    background: linear-gradient(227.85deg, #58A1E4 0.29%, #2677B1 27.04%, #025183 72.67%);
     font-family: 'Inter', sans-serif;
-    color: white;
+    color: black;
     display: flex;
     flex-direction: row;
 }
@@ -37,7 +38,7 @@ header {
     display: flex;
     padding: 10px;
     width: 15%;
-    height: 50%;
+    height: 100%;
     padding: 1% 2%;
     box-sizing: border-box;
     gap: 15px;
@@ -45,7 +46,7 @@ header {
 
 
 
-nav {
+/* nav {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -56,6 +57,20 @@ nav {
     background-color: #58A1E4;
     border-radius: 16px;
     box-sizing: border-box;
+} */
+/* nav {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 50px;
+    height: 90vh;
+    padding: 1%;
+    background-color: #58A1E4;
+    border-radius: 16px;
+    box-sizing: border-box;
+    
 }
 nav a {
     display: flex;
@@ -77,15 +92,17 @@ nav ul li {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
 .container-cadastro {
+    margin-left: 40%;
+    left: 30%;
     border-radius: 5%;
     display: flex;
     justify-content: center;
-    width: 500px;
+    width: 60%;
     height: 80%;
-   background-image: linear-gradient(227.85deg, #5d9fdc 0.29%, #2677B1 27.04%, #025183 72.67%);
+    background-color: #ddd;
     padding: 20px;
 }
 
@@ -95,6 +112,7 @@ nav ul li {
     justify-content: center;
     padding-top: 2%;
     gap: 5px;
+    align-items: center;
 }
 
 .caixa-cadastro {
@@ -103,17 +121,6 @@ nav ul li {
     gap: 8px;
 }
 
-input {
-    width: 100%;
-    background-color: #eee;
-    font-family: 'Inter';
-    border-radius: 8px;
-    padding: 5px;
-    width: 100%;
-    height: 40px;
-    border: 1px solid #444242;
-    transition: .5s;
-}
 
 label {
     display: flex;
@@ -178,4 +185,50 @@ img {
     flex-direction: column;
     align-items: start;
     gap: 4px;
+    font-size: 15px;
+}
+.header-background {
+    width: 100%;
+    display: flex;
+    bottom: 0%;
+    position: absolute;
+    z-index: -3;
+    filter: brightness(1.1)
+}
+.header-content .header-background {
+    top: 62.5%;
+}
+.caixa-cadastro input {
+    width: 100%;
+    background-color: #eee;
+    font-family: 'Inter';
+    border-radius: 8px;
+    padding: 5px;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+    transition: .5s;
+}
+
+.cadastro-titulo h2 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 20px;
+    color: #58A1E4;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 20px;
+    margin: 0;
+}
+.caixa-cadastro a {
+    display: flex;
+    justify-content: end;
+    font-size: 15px;
+}
+.redirecionar {
+
+    color: #58A1E4;
+    font-weight: 900;
+    font-size: 20px;
 }
