--- a/public/dashboard/style/style-dashboard.css
+++ b/public/dashboard/style/style-dashboard.css
@@ -75,19 +75,28 @@ nav ul li a img {
     font-size: 30px;
 }
 
-.notification-container {
-    width: 16vw;
+i {
+    cursor: pointer !important;
+}
+
+#notification_container {
+    width: fit-content;
+    height: fit-content;
+    max-height: 500px;
     position: absolute;
-    top: 15vh;
-    left: 5vw;
+    top: 8vh;
+    left: 3vw;
     display: none;
     justify-content: center;
     align-items: center;
-    gap: 4px;
-    padding: 8px;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    gap: 12px;
+    padding: 12px;
     background-color: white;
     border-radius: 8px;
-    box-shadow: 0px 1px 10px 1px black;
+    box-shadow: 0px 35.6783px 14.4943px rgba(0, 0, 0, 0.04), 0px 20.0691px 12.2644px rgba(0, 0, 0, 0.13), 0px 8.91959px 8.91959px rgba(0, 0, 0, 0.21), 0px 2.2299px 4.45979px rgba(0, 0, 0, 0.25), 0px 0px 0px rgba(0, 0, 0, 0.25);
 }
 
 .notification .ph {
