--- a/public/dashboard/style/cadastroUser.css
+++ b/public/dashboard/style/cadastroUser.css
@@ -1,26 +1,32 @@
 @import url('https://fonts.cdnfonts.com/css/momcake?styles=70427,70426');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
     width: 8px;
     background-color: #fff;
     border-radius: 30px;
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
     background-color: #ddd;
     border-radius: 30px;
 }
-*{
+
+* {
     text-decoration: none;
     margin: 0%;
 }
 
 body {
+    height: 100vh;
     background: linear-gradient(227.85deg, #58A1E4 0.29%, #2677B1 27.04%, #025183 72.67%);
+    background-size: cover;
     font-family: 'Inter', sans-serif;
     color: black;
     display: flex;
     flex-direction: row;
 }
+
 /* .tudao {
     display: flex;
     width: 50%;
@@ -28,89 +34,34 @@ body {
     align-items: center;
 
 } */
-h1, h2, h3, h4, h5, h6, ul, li {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+li {
     margin: 0;
     padding: 0;
 }
 
-header {
-    flex-direction: start;
-    display: flex;
-    padding: 10px;
-    width: 15%;
-    height: 100%;
-    padding: 1% 2%;
-    box-sizing: border-box;
-    gap: 15px;
-}
-
-
-
-/* nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: start;
-    width: 100%;
-    height: 90vh;
-    padding: 2%;
-    background-color: #58A1E4;
-    border-radius: 16px;
-    box-sizing: border-box;
-} */
-/* nav {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 50px;
-    height: 90vh;
-    padding: 1%;
-    background-color: #58A1E4;
-    border-radius: 16px;
-    box-sizing: border-box;
-    
-}
-nav a {
-    display: flex;
-    flex-direction: row;
-    
-}
-
-nav ul {
-    width: 60%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    gap: 16px;
-    list-style: none;
-}
-
-nav ul li {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 
 .container-cadastro {
-    margin-left: 40%;
-    left: 30%;
-    border-radius: 5%;
+    border-radius: 16px;
     display: flex;
     justify-content: center;
-    width: 60%;
-    height: 80%;
+    width: 20%;
+    height: 55%;
     background-color: #ddd;
     padding: 20px;
 }
 
 .caixa-grande {
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
-    padding-top: 2%;
+    height: 100%;
     gap: 5px;
     align-items: center;
 }
@@ -120,7 +71,6 @@ nav ul li {
     flex-direction: column;
     gap: 8px;
 }
-
 
 label {
     display: flex;
@@ -175,7 +125,7 @@ img {
     font-weight: 600;
 }
 
-.flex  {
+.flex {
     display: flex;
     gap: 30px;
 }
@@ -187,6 +137,7 @@ img {
     gap: 4px;
     font-size: 15px;
 }
+
 .header-background {
     width: 100%;
     display: flex;
@@ -195,9 +146,11 @@ img {
     z-index: -3;
     filter: brightness(1.1)
 }
+
 .header-content .header-background {
     top: 62.5%;
 }
+
 .caixa-cadastro input {
     width: 100%;
     background-color: #eee;
@@ -221,11 +174,13 @@ img {
     font-size: 20px;
     margin: 0;
 }
+
 .caixa-cadastro a {
     display: flex;
     justify-content: end;
     font-size: 15px;
 }
+
 .redirecionar {
 
     color: #58A1E4;
